--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = md4c
-url = https://github.com/mity/md4c/archive/release-0.4.3.tar.gz
+url = https://github.com/mity/md4c/archive/release-0.4.6/md4c-0.4.6.tar.gz
 archives = 
 giturl = https://github.com/mity/md4c.git
 domain = 
